# clings

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  Package.swift  README.md  SECURITY.md
.braintrust/sessions/: 2026-02-26-108pm-update-when-heading-review.md  2026-02-26-430pm-final-review-round4.md
.claude/: settings.local.json
.github/workflows/: things-release-monitor.yml
Sources/ClingsCLI/: Clings.swift
Sources/ClingsCLI/Commands/: AddCommand.swift  BulkCommand.swift  ConfigCommand.swift  FilterCommand.swift  ListCommands.swift  MutationCommands.swift  OpenCommand.swift  ProjectCommands.swift  ReviewCommand.swift  SearchCommand.swift  ShowCommand.swift  StatsCommand.swift
Sources/ClingsCore/Config/: AuthTokenStore.swift
Sources/ClingsCore/Filter/: FilterExpression.swift  FilterParser.swift
Sources/ClingsCore/Models/: Todo.swift
Sources/ClingsCore/Output/: OutputFormatter.swift
Sources/ClingsCore/ThingsClient/: HybridThingsClient.swift  JXAScripts.swift  ThingsClient.swift  ThingsDatabase.swift
Sources/ClingsCore/Utils/: SchemaIntrospector.swift
Tests/ClingsCLITests/: ArgumentParsingTests.swift  CommandConfigurationTests.swift
backup/Things-Database-Backup-20260226-131712.thingsdatabase/: main.sqlite  main.sqlite-shm  main.sqlite-wal
docs/plans/: 2026-02-26-update-when-heading.md
research/session-logs/: 2026-03-04-1104-dcp-session-log.md  2026-03-04-1109-dcp-session-log.md
scripts/: update-schema-baseline.sh
src/: error.rs  main.rs
src/cli/: args.rs
src/cli/commands/: bulk.rs  list.rs  (+3 more)
src/things/: client.rs
(+24 files in other folders)
