[package]
name = "clings"
version = "0.1.6"
edition = "2021"
description = "A Things 3 CLI for macOS"
license = "GPL-3.0-only"
repository = "https://github.com/dan-hart/clings"
keywords = ["things", "todo", "macos", "cli", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
# CLI and serialization
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Output formatting
colored = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Natural language parsing
regex = "1"
once_cell = "1"

# Interactive fuzzy finder
skim = "0.10"

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
mockall = "0.12"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
